overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,19 @@ button .fa-bars {
 .animate-slide2 {
   animation: slideEffect2 20s infinite;
 }
+
+
+::-webkit-scrollbar {
+  width: 5px; 
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 10px; 
+ 
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(125deg, #fb3c7f 0%, #ffc05e 100%);
+  border-radius: 10px;
+}
